Corrected 2 french typos

--- a/translations/help.fr.xlf
+++ b/translations/help.fr.xlf
@@ -7633,7 +7633,7 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
       </notes>
       <segment>
         <source>Mithilfe von Scripten können Spieler die Funktionen und Benutzeroberfläche von MyHordes an ihre Bedürfnisse anpassen. Damit das Spiel dennoch für alle fair bleibt, gelten einige Regeln für den Einsatz von Scripten (unabhängig davon, ob ihr eure Scripte weitergebt oder nur für euch selbst verwendet).</source>
-        <target>Avec l'aide de scripts, les joueurs peuvent adapter les fonctions et l'interface utilisateur du MyHordes à leurs besoins. Pour que le jeu reste toujours équitable pour tous le monde, certaines règles s'appliquent à l'utilisation de scripts (Indépendamment de savoir si votre script est utilisé par d'autres ou utilisé uniquement par vous-même).</target>
+        <target>Avec l'aide de scripts, les joueurs peuvent adapter les fonctions et l'interface utilisateur du MyHordes à leurs besoins. Pour que le jeu reste toujours équitable pour tout le monde, certaines règles s'appliquent à l'utilisation de scripts (indépendamment de savoir si votre script est utilisé par d'autres ou utilisé uniquement par vous-même).</target>
       </segment>
     </unit>
     <unit id="XY_OEJT" name="b15dd21">
