ES Translation for search without results

--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2522,7 +2522,7 @@
       </notes>
       <segment>
         <source>Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.</source>
-        <target>Es wurden keine Nachrichten gefunden, die deiner Suchanfrage entsprechen.</target>
+        <target>No hay resultados que correspondan a tu búsqueda.</target>
       </segment>
     </unit>
     <unit id="uvXzw5b" name="c09e87f">
