--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -16492,7 +16492,7 @@
       </notes>
       <segment>
         <source>hoch</source>
-        <target>hoch</target>
+        <target>importantes</target>
       </segment>
     </unit>
     <unit id="ssHCx3q" name="1d82f8e">
@@ -16501,7 +16501,7 @@
       </notes>
       <segment>
         <source>Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist %chances%...</source>
-        <target>Die Chance, beim Verschlingen eines Bürgers entdeckt zu werden, ist %chances%...</target>
+        <target>Tus probabilidades de ser descubierto si devoras a un habitante son %chances%...</target>
       </segment>
     </unit>
     <unit id="qD3lUP9" name="dc1e0ac">
@@ -16510,7 +16510,7 @@
       </notes>
       <segment>
         <source>Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.</source>
-        <target>Das Risiko basiert auf der Anzahl der Bürger in der Aussenwelt. Je mehr Bürger sich außerhalb der Stadt aufhalten, desto geringer sind die Chancen, entdeckt zu werden.</target>
+        <target>Este riesgo depende directamente de la cantidad de habitantes que se quedaron en el pueblo: mientras haya más habitantes en el Ultramundo, menor es el riesgo de ser visto en el pueblo.</target>
       </segment>
     </unit>
     <unit id="8yLsMnc" name="1f8ca6f">
