--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -6918,7 +6918,7 @@
     </unit>
     <unit id="9hu_P2F" name="f13ed10">
       <notes>
-        <note category="german">Du hast heute bereits gegessen. Eine weitere Essensration erlaubt dir heute nicht weitere AP.</note>
+        <note category="german">Du hast heute bereits gegessen. Eine weitere Essensration erlaubt dir heute nicht weitere AP zu erhalten.</note>
       </notes>
       <segment>
         <source>Du hast heute bereits gegessen. Eine weitere Essensration erlaubt dir heute nicht weitere AP.</source>
