--- a/translations/help.de.xlf
+++ b/translations/help.de.xlf
@@ -6377,7 +6377,7 @@ Falls sich nicht genug Spieler finden, die deine Stadt spielen wollen, wird sie 
       </notes>
       <segment>
         <source>einen Brief zeichnen,</source>
-        <target>einen Brief zeichnen,</target>
+        <target>einen Buchstaben zeichnen,</target>
       </segment>
     </unit>
     <unit id="CIjyKLi" name="385f89a">
